--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-beautiful-dnd",
-  "version": "11.0.5",
+  "version": "11.0.5-siren-1",
   "description": "Beautiful and accessible drag and drop for lists with React",
   "author": "Alex Reardon <areardon@atlassian.com>",
   "keywords": [
